--- a/index.html
+++ b/index.html
@@ -25,13 +25,17 @@
 				<div class="stats-container">
 					<h2>Stats</h2>
 					<ul>
-						<li>Age: <span>0</span></li>
+						<li>Age: <span id="js-age">0</span></li>
 						<li>Hunger: <span>0</span></li>
 						<li>Sleepiness: <span>0</span></li>
 						<li>Boredom: <span>0</span></li>
 					</ul>
 				</div>
-				<div class="tamagotchi-container"></div>
+				<div class="tamagotchi-container">
+					<!-- <div class="egg">
+						<div class="spots"></div>
+					</div> -->
+				</div>
 				<div class="controls-container">
 					<h2>Controls</h2>
 					<button>Play</button>
@@ -48,7 +52,7 @@
 					Click "play" to get started. Maintain hunger, boredom, and sleepiness
 					below 100 to keep your pet alive.
 				</p>
-				<button>Play</button>
+				<button id="js-play-btn">Play</button>
 			</div>
 		</section>
 		<section class="modal-container modal-game-over hide">
